--- a/4GLCuadroDeMandoRevisionDeFicherosGarum/Form1.resx
+++ b/4GLCuadroDeMandoRevisionDeFicherosGarum/Form1.resx
@@ -287,4 +287,7 @@
   <metadata name="TmrRefresco.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1284, 17</value>
   </metadata>
+  <metadata name="TmrParpadeo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1404, 17</value>
+  </metadata>
 </root>
